<resources>
    <string name="app_name">EFXC Remote</string>
    <string name="btnEncender">Encender</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnApagar">Apagar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnLeer">Leer</string>
    <string name="btnSalir">Salir</string>
    <string name="answer">Answer</string>
    <string name="pedal1">Pedal 1</string>
    <string name="pedal2">Pedal 2</string>
    <string name="pedal3">Pedal 3</string>
    <string name="pedal4">Pedal 4</string>
    <string name="ledTag">LED</string>
    <string name="stateTag">Pedal Data</string>
    <string name="pedal1state">Pedal 1 State: </string>
    <string name="pedal2state">Pedal 2 State: </string>
    <string name="pedal3state">Pedal 3 State: </string>
    <string name="pedal4state">Pedal 4 State: </string>
</resources>
